# bird-id-realtime

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
app/: auth.py  config.py  main.py
app/services/: bird_classifier.py  bird_detector.py  stream_capture.py  temporal_smoother.py
app/static/: app.js  styles.css
app/templates/: index.html  login.html
docs/superpowers/specs/: 2026-04-22-login-design.md
integrations/: README.md  ring-mqtt-macos.md  scrypted-ring-macos.md
integrations/ring-mqtt/: config.example.json  init_ring_mqtt.sh  prepare_mosquitto.sh  prepare_ring_mqtt.sh  start_mosquitto.sh  start_ring_mqtt.sh  stop_mosquitto.sh  stop_ring_mqtt.sh
